--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -200,6 +200,7 @@ html {
 }
 body {
   color: hsla(0, 0%, 0%, 0.8);
+  font-size: 16px;
   font-family: georgia, serif;
   font-weight: normal;
   word-wrap: break-word;
